# Equilibrium-Vision

./: .gitignore  .replit  CHANGELOG.md  Dockerfile  LIMITATIONS.md  README.md  TODO.md  android-apk-ci.yml  ci.yml  genesis.json  pnpm-lock.yaml  release-node.yml  replit.md  tsconfig.json
attached_assets/: #_Equilibrium_1783482943367.md  #_Latest_Replit_Transcript,_Implementation_Draft_&_GitHub_erro_1783631968161.txt  #_Latest_Replit_Transcript,_Implementation_Draft_&_GitHub_erro_1783641731229.txt  Both_prior_review_findings_are_confirmed_fixed,_and_everything__1783180521293.md  Build_the_variational-ai_Rust_crate_—_all_the_solver-determinis_1783487605109.md  Build_the_variational-ai_Rust_crate_—_all_the_solver-determinis_1783490447892.md  Equilibrium_Blockchain_Replit_transcript_logs_1783125119913.md  Equilibrium_Mainnet_Readiness_—_Final_Comprehensive_Document_1783302207576.md  Equilibrium__The_testnet_is_whole,_now_it's_time_to_close_the_l_1783125132612.md  IBC_Feasibility_&_Cross‑Chain_Attestation_–_Final_Assessment_an_1783641749201.md  Let_me_read_the_rest_of_the_file_and_check_the_current_codebase_1783202673172.md  Most_recent_Replit_Trancript_&_Github_Error_Message_1783647429678.md  Pasted--Build-the-variational-ai-Rust-crate-all-the-solver-det_1783530362037.txt  Pasted--Build-the-variational-ai-Rust-crate-all-the-solver-det_1783535364773.txt  Pasted--Claude-Sonnet-5-Review-Found-my-own-error-I-fetched-bu_1783551536227.txt  Pasted--Claude-Sonnet-5-Review-Found-my-own-error-I-fetched-bu_1783614549861.txt  Pasted--Equilibrium-Below-is-the-complete-drop-in-variational-_1783493176342.txt  Pasted--Failed-Tests-4-FAIL-src-tests-arbitrage-integration-te_1783564107957.txt  Pasted--Future-Work-See-TODO-md-for-the-complete-prioritized-b_1783100549134.txt  Pasted-3s-Run-cargo-clippy-all-targets-D-warnings-Checking-var_1783563211522.txt  Pasted-4-actions-The-root-problem-is-node-modules-missing-let-_1783089579770.txt  Pasted-All-5-bugs-from-your-previous-session-are-fixed-231-231_1783654535105.txt  Pasted-All-5-bugs-from-your-previous-session-are-fixed-231-231_1783658638349.txt  Pasted-Both-prior-review-findings-are-confirmed-fixed-and-ever_1783170916120.txt  Pasted-Both-prior-review-findings-are-confirmed-fixed-and-ever_1783170967905.txt  Pasted-Build-signed-release-APK-summary-Gradle-Root-Project-Re_1783390426022.txt  Pasted-Equilibrium-Actionable-Work-Split-Replit-vs-Hetzner-Thi_1783299176794.txt  Pasted-Equilibrium-Complete-Combined-Status-Updated-This-combi_1783551362713.txt  Pasted-Equilibrium-Complete-Current-State-Unified-Roadmap-Here_1783532509959.txt  Pasted-Equilibrium-Complete-Honest-Status-Updated-Last-verifie_1783555241466.txt  (+31 more)
contracts/model_registry/: Cargo.toml  build.sh  model_registry.hex
contracts/model_registry/src/: lib.rs
docs/: architecture.md  (+7 more)
equilibrium/: Cargo.toml  README.md
equilibrium/mobile/android/: build-jni.sh  gradlew  settings.gradle.kts
equilibrium/mobile/android/app/: build.gradle.kts  proguard-rules.pro
equilibrium/mobile/android/app/src/main/: AndroidManifest.xml
equilibrium/mobile/android/app/src/main/java/com/equilibrium/: MainActivity.kt  MiningService.kt  MiningWorker.kt  UpdateChecker.kt
equilibrium/mobile/android/app/src/main/java/com/equilibrium/ai/: VariationalAI.kt
equilibrium/mobile/android/app/src/main/java/com/equilibrium/workers/: ThermalGuard.kt
equilibrium/mobile/android/app/src/main/res/layout/: activity_main.xml
equilibrium/mobile/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
equilibrium/mobile/android/gradle/: libs.versions.toml
equilibrium/mobile/ios/: Package.swift
equilibrium/mobile/ios/Equilibrium/: EquilibriumBridge.h  MiningService.swift
equilibrium/mobile/ios/Equilibrium/Sources/EquilibriumCoreStub/: Stub.swift
equilibrium/mobile/ios/Equilibrium/Sources/EquilibriumMiner/: MiningCoordinator.swift
equilibrium/mobile/ios/Equilibrium/Tests/: MiningCoordinatorTests.swift
equilibrium/mobile/shared/: equilibrium.h
equilibrium/src/: chain_state.rs  consensus.rs  crypto.rs  ffi.rs  jni_bridge.rs  lib.rs  p2p.rs  stationary_solver.rs  wallet.rs  zk_proof.rs
equilibrium/testnet/node/: main.rs
variational-ai/: Cargo.toml
variational-ai/.cargo/: config.toml
variational-ai/src/: action.rs  arbitrage.rs  benchmarks.rs  deterministic.rs  jni_bridge.rs  lib.rs  logistic.rs  main.rs  mlp.rs  mnist.rs  ntk.rs  solver.rs
(+171 files in other folders)
