[package]
name = "equilibrium-core"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "testnet-node"
path = "testnet/node/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
libp2p = { version = "0.53", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
ark-std = "0.4"
ark-snark = "0.4"
