[package]
name = "equilibrium-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.79"

[[bin]]
name = "testnet-node"
path = "testnet/node/main.rs"

[[bin]]
name = "wallet"
path = "src/bin/wallet.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
libp2p = { version = "0.53", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
ark-std = "0.4"
ark-snark = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
