[package]
name = "variational-ai"
version = "0.1.0"
edition = "2021"

# ── Binaries ──────────────────────────────────────────────────────────────────
[[bin]]
name = "variational-ai"          # cargo run --bin variational-ai
path = "src/main.rs"

[[bin]]
name = "variational-ai-cli"      # verify_residual bridge called by the TS server
path = "src/bin/cli.rs"

[[bin]]
name = "variational-ai-harness"  # determinism conformance harness
path = "src/bin/harness.rs"

[[bin]]
name = "variational-ai-arbitrage-cli"  # DEX arbitrage detector bridge called by the TS API server
path = "src/bin/arbitrage_cli.rs"

# ── Library (cdylib for Android JNI, rlib for host linking) ──────────────────
[lib]
name = "variational_ai"
crate-type = ["cdylib", "rlib"]

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
nalgebra    = "0.32"
rand        = "0.8"
rand_chacha = "0.3"          # ChaCha8Rng for seeded, reproducible RNG
libm        = "0.2"          # deterministic transcendental functions
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
sha2        = "0.10"         # SHA-256 for determinism harness
hex         = "0.4"          # hex encoding for harness output

# ── Optional features ────────────────────────────────────────────────────────
[dependencies.jni]
version = "0.21"
optional = true
default-features = false

[features]
default       = []
jni-bridge    = ["jni"]      # enable Android JNI exports
