[package]
name = "model_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ── WASM build profile ────────────────────────────────────────────────────────
[profile.release]
opt-level = "z"        # minimise binary size
lto = true
panic = "abort"        # required for no_std WASM

[dependencies]
# SHA-256 for the support-set commitment (propose() commits to a hash of the
# support data; challenge() must supply data that hashes to the same value).
# No serde/serde_json here: the only outbound JSON is the fixed-shape
# verify_residual request, which is cheaper and more auditable to build by
# hand with `alloc::format!` than to pull in a full no_std JSON serializer for.
sha2 = { version = "0.10", default-features = false }
